--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/angular": "^8.0.0",
     "@ionic/storage": "^4.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "@mapbox/polyline": "^1.2.1",
     "axios": "^1.7.7",
     "cordova-sqlite-storage": "^6.1.0",
     "ionicons": "^7.0.0",
@@ -53,6 +54,7 @@
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.14",
+    "@types/node": "^22.9.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.57.0",
